tests/error/prim_ref.gw
// [contains] cannot declare/instantiate references (@) of primitive type
int @i;
